[tool.poetry]
name = "griddly"
version = "1.7.0"
description = "Griddly Engine"
authors = ["Bam4d <chrisbam4d@gmail.com>"]

include = [
    { path = "griddly/resources/**/*" },
    { path = "griddly/libs/python_griddly*.so"},
    { path = "griddly/libs/python_griddly*.pyd"}
]


[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["docs", "tests", "examples", "scratchpad"]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
wandb = "^0.15.3"
pygame = "^2.4.0"
pyglet = "^2.0.0"
torch = "1.13.1"
numpy = "<1.24"
gymnasium = "^0.26.3"
ray = {extras = ["rllib"], version = "^2.4.0"}
tensorflow-probability = "0.19.0"
tensorflow-macos = {version="2.11.0", platform="darwin"}
tensorflow = {version="2.11.0", platform="win32|linux"}
tensorflow-io-gcs-filesystem = {version="0.31.0", platform="win32"}
moviepy = "^1.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.1"
types-pyyaml = "^6.0.12.11"

[tool.poetry.build]
script = "tools/package_resources.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
